<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview_title"
        android:textSize="30dp"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textAllCaps="false"
        android:text="@string/button_text" />

    <Button
        android:id="@+id/servicebutton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textAllCaps="false"
        android:text="@string/button_text_service" />

    <Button
        android:id="@+id/notificationbutton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textAllCaps="false"
        android:text="@string/button_text_notification" />

    <Button
        android:id="@+id/notificationservicebutton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textAllCaps="false"
        android:text="@string/button_text_notification_core" />

</LinearLayout>